docs: TIT - 파일 구조 변경 및 내용 정리
- Builder 패턴, final 키워드, MapStruct 관련 정리 (2025-04-04.md)
- 파일 구조 변경: README.md 생성, 2025-04-03.md 줄바꿈 처리

--- a/docs/TIT/2025-04-03.md
+++ b/docs/TIT/2025-04-03.md
@@ -1,22 +1,16 @@
-## 📝 TIT (Today I Think)
-
-`/docs/TIT.txt`는 매일 개발 과정에서의 배운 점, 고민한 내용, 적용 아이디어 등을 자유롭게 기록한 개인 메모입니다.
-학습 흐름을 자연스럽게 쌓아가기 위해, **초기에는 큰 틀 없이 자유롭게 작성**하며,
-**데이터가 충분히 모이면 주제별로 분리**하거나 **velog 포스트로 정리할 예정입니다.**
-
 ## DATE: 2025-04-03
 
 ### 리팩토링 고려 요소 정리
 
 #### 리팩토링 우선순위 정하기 : 하지 않으면 다음 단계가 불가능한거 / 하지 않으면 배포 불가능한거 / 배포 후 해도 되는거
 
-예외처리 : null만 체크하는 코드 찾기 > 어떻게 개선할지 판단하기 (checked vs unchecked) > 적용
-로깅 도입 : 우선 println 다 지우기 > logging이 필요한 부분 판단하기 > 어떤 도구 사용할지 정하기(SLF4J + Logback) > 적용
-비즈니스 로직 분리 : 다른 개발자들의 기술 블로그 읽어보기 > 공통적으로 판단하는 기준 추출하기 + 프로젝트 상황에 맞는 기준 분류 > 내 프로젝트에 맞게 적용
-DTO Entity 변환 분리 : 왜 필요한지 알아보기 >
-클래스 제목 : (코드 배껴 쓰느라 기준이 섞여있음) 다른 github 프로젝트들 찾아보기 > 클래스명 짓는 기준 분류하기(장단점도 조사) > 내 프로젝트에 적용할 클래스 작명 기준 정하기 > 적용
-페이징 처리 개선 : 현재 적용된 페이징이 offset인지 cursor인지 다른건지 파악 > 첫 페지는 offset + 다른 페이지는 cursor 적용해보기
-트랜잭션 관리 : 보수적으로 트랜잭션 적용해보기 > 성능을 최대화하기 위해 어디까지 트랜잭션을 해제할 수 있는지 적용해보기 > 둘다 성능 테스트 해보기
+예외처리 : null만 체크하는 코드 찾기 > 어떻게 개선할지 판단하기 (checked vs unchecked) > 적용<br>
+로깅 도입 : 우선 println 다 지우기 > logging이 필요한 부분 판단하기 > 어떤 도구 사용할지 정하기(SLF4J + Logback) > 적용<br>
+비즈니스 로직 분리 : 다른 개발자들의 기술 블로그 읽어보기 > 공통적으로 판단하는 기준 추출하기 + 프로젝트 상황에 맞는 기준 분류 > 내 프로젝트에 맞게 적용<br>
+DTO Entity 변환 분리 : 왜 필요한지 알아보기 ><br>
+클래스 제목 : (코드 배껴 쓰느라 기준이 섞여있음) 다른 github 프로젝트들 찾아보기 > 클래스명 짓는 기준 분류하기(장단점도 조사) > 내 프로젝트에 적용할 클래스 작명 기준 정하기 > 적용<br>
+페이징 처리 개선 : 현재 적용된 페이징이 offset인지 cursor인지 다른건지 파악 > 첫 페지는 offset + 다른 페이지는 cursor 적용해보기<br>
+트랜잭션 관리 : 보수적으로 트랜잭션 적용해보기 > 성능을 최대화하기 위해 어디까지 트랜잭션을 해제할 수 있는지 적용해보기 > 둘다 성능 테스트 해보기<br>
 테스트 코드 작성 : 프로젝트 규모나 특성별로 사용하는 테스트 방법론 알아보기 > 테스트 기준 정하기 > 테스트 툴별 장단점 조사하기 > 테스트 툴 정하기(JUnit5 + Mockito /
 SpringBootTest + TestRestTemplate/MockMvc)
 
@@ -59,13 +53,8 @@ SpringBootTest + TestRestTemplate/MockMvc)
 
 ### Custom Exception 사용, 기본 예외 사용 기준
 
-1. Custom Exception
-
-- 비즈니스 로직 관련 예외
-
-2. 기본 예외 (IOException)
-
-- 시스템 예외 : I/O, 네트워크 통신 등
+1. Custom Exception: 비즈니스 로직 관련 예외
+2. 기본 예외 (IOException): 시스템 예외 : I/O, 네트워크 통신 등
 
 ### 예외 처리 흐름 (REST API 전환 전 기준)
 
@@ -83,7 +72,7 @@ SpringBootTest + TestRestTemplate/MockMvc)
 
 ---
 
-### 로깅 (초보자 수준에서) -
+### 로깅 (초보자 수준에서)
 
 #### SLF4J + Logback
 
@@ -101,8 +90,8 @@ SpringBootTest + TestRestTemplate/MockMvc)
 - ERROR : 예외 발생 시 무조건 사용 (스택트레이스 포함)
   -> log.error 찍을 때 e.getMessage() 말고 e 객체 넣어야 함!!!
 
-[로깅 레벨을 정해보자](https://velog.io/@idonymyeon/%ED%8C%80-%EB%A1%9C%EA%B9%85-%EC%A0%84%EB%9E%B5-%EC%84%B8%EC%9A%B0%EA%B8%B0-prnri6hn)
-[옵저버빌리티: 로그라고해서 다 같은 로그가 아니다(1/2)](https://netmarble.engineering/observability-logging-a/)
+[로깅 레벨을 정해보자](https://velog.io/@idonymyeon/%ED%8C%80-%EB%A1%9C%EA%B9%85-%EC%A0%84%EB%9E%B5-%EC%84%B8%EC%9A%B0%EA%B8%B0-prnri6hn)<br>
+[옵저버빌리티: 로그라고해서 다 같은 로그가 아니다(1/2)](https://netmarble.engineering/observability-logging-a/)<br>
 [옵저버빌리티: 로그라고해서 다 같은 로그가 아니다(2/2)](https://netmarble.engineering/observability-logging-b/)
 
 #### application.yml 설정
